--- a/auth/static/index.html
+++ b/auth/static/index.html
@@ -32,7 +32,7 @@
                     <label>
                     Email Address<span class="req">*</span>
                     </label>
-                    <input type="email"required autocomplete="off"/>
+                    <input srequired autocomplete="off"/>
                 </div>
                 
                 <div class="field-wrap">
