--- a/auth/static/profile.html
+++ b/auth/static/profile.html
@@ -12,33 +12,30 @@
 
 </head>
 
-<section id="main">
+  <body>
+
+    <section id="main">
         <div class="container">
           <article id="main-col">
               <div class="border">
-            <h1 class="page-title">User Information</h1>
+            <h1 id='user-title' class="page-title">oops...</h1>
             <ul id="services">
               <li>
-                <h3>Name</h3>
-                <p>Username info</p>
+                <h3 h3>Name</h3> <p id='name'>Username info</p>
               </li>
               <li>
-                <h3 class="white">Email</h3>
-                <p>Email info</p>
-              </li>
-              <li>
-                <h3 class="white">Background Color</h3>
-                <p>Color info</p>
+                <h3 class="white">Email</h3> <p id='email'>Email info</p>
               </li>
             </ul>
         </div>
         </article>
     
          </div>
-       </section>
+        </section>
 
-<body>
-   
+  </body>
 
-</body>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src="js/profile.js"></script>
+
 </html>
